2019-08-27  Werner Lemberg  <wl@gnu.org>

	* Makefile (PLATFORM==unixdev): Add `libbrotlidec'.

	This is needed for the new WOFF2 support.

2019-07-01  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.1 released.
	==========================


	Tag sources with `VER-2-10-1.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2019-07-01  Werner Lemberg  <wl@gnu.org>

	* graph/x11/grx11.c (gr_x11_surface_init): Fix C++ warnings.

2019-06-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (bitmap_scale): Gray alternative to LCD bitmap...
	(Process_Event): ... after repeated bitmap toggles.

2019-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Tweak direct rendering.

	* src/ftcommon.c (FT_Demo_Sketch_Glyph_Color): Redefine surface origin
	and clipping box instead of shifting outline.
	* src/ftgrid.c (grid_status_draw_outline): Tweaked.
	* graph/gblspans.h: Simplify.
	* graph/grobjs.h (grSurface): Introduce `origin' byte.
	* graph/gblblit.c: Silence compilation warning.

2019-06-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Direct outline drawing.

	Now we can test `FT_RASTER_FLAG_DIRECT' and it is also faster because
	the glyph outline image is extremely sparse.

	* src/ftcommon.[hc] (FTDemo_Sketch_Glyph_Color): Implement rendering
	in direct mode.
	* src/ftgrid.c (grid_status_draw_outline): Use it.

2019-06-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement and register gray_span function.

	* graph/gblspans.h, graph/gblany.h (_gblender_spans_*): New functions.
	* graph/grobjs.h (grSurface): New fields `gray_spans' and `gcolor'.
	* graph/gblblit.c (grSetSurfaceGamma): Initialize `gray_spans'.
	* graph/rules.mk: Add new file.

2019-06-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Clearly separate two blenders.

	* graph/gblblit.[hc] (grBlitGlyphToSurface): Declare and define it.
	* graph/grblit.c (grBlitGlyphToBitmap): Call `grBlitGlyphToSurface'.